Improve the 2019 security advisories.
- Fix the affected versions for 2019-01.
- Specify that only affected users need to upgrade.

--- a/docs/security/2019-01.md
+++ b/docs/security/2019-01.md
@@ -17,7 +17,7 @@ This vulnerability is present in the following releases:
 
 ### Recommended Action
 
-This vulnerability is fixed in version 3.1.0. It is strongly recommended that all users upgrade.
+This vulnerability is fixed in version 3.1.0. It is strongly recommended that all affected users upgrade.
 
 If upgrading is not possible then the silence module should be unloaded.
 
