--- a/docs/security/2019-02.md
+++ b/docs/security/2019-02.md
@@ -17,7 +17,7 @@ This vulnerability is present in the following releases:
 
 ### Recommended Action
 
-This vulnerability is fixed in versions 2.0.28 and 3.3.0. It is strongly recommended that all users upgrade.
+This vulnerability is fixed in versions 2.0.28 and 3.3.0. It is strongly recommended that all affected users upgrade.
 
 If upgrading is not possible then the mysql module should be unloaded.
 
@@ -25,7 +25,7 @@ If upgrading is not possible then the mysql module should be unloaded.
 
 * 2019-08-19 &mdash; A crash vulnerability was reported to the InspIRCd team.
 * 2019-08-20 &mdash; The cause of the crash was identified by the InspIRCd team and a fix was prepared.
-* 2019-08-23 &mdash; InspIRCd v3.3.0 was released with a fix for the crash vulnerability.
+* 2019-08-23 &mdash; InspIRCd v2.0.28 and v3.3.0 was released with a fix for the crash vulnerability.
 
 ### References
 
