Add CVE identifiers to security advisories.

--- a/docs/security/2019-01.md
+++ b/docs/security/2019-01.md
@@ -32,3 +32,4 @@ If upgrading is not possible then the silence module should be unloaded.
 
 * [InspIRCd commit bcd65de](https://github.com/inspircd/inspircd/commit/bcd65de1ec4bb71591ae417fee649d7ecd37cd57).
 * [InspIRCd commit 7b47de3](https://github.com/inspircd/inspircd/commit/7b47de3c194f239c5fea09a0e49696c9af017d51).
+* [CVE-2019-20918](https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2019-20918)
