--- a/docs/security/2020-01.md
+++ b/docs/security/2020-01.md
@@ -31,3 +31,4 @@ If upgrading is not possible then the pgsql module should be unloaded.
 
 * [InspIRCd commits 6f6fa13, a9e107c, and 07d7dea (v2)](https://github.com/inspircd/inspircd/compare/v2.0.28...07d7dea).
 * [InspIRCd commits b24a911, fbdd080, and b3f1db9 (v3)](https://github.com/inspircd/inspircd/compare/426d1c8...b3f1db9).
+* [CVE-2020-25269](https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-25269)
