--- a/docs/security/2019-02.md
+++ b/docs/security/2019-02.md
@@ -31,3 +31,4 @@ If upgrading is not possible then the mysql module should be unloaded.
 
 * [InspIRCd commit 2cc35d8 (v2)](https://github.com/inspircd/inspircd/commit/2cc35d8625b7ea5cbd1d1ebb116aff86c5280162).
 * [InspIRCd commit 8745660 (v3)](https://github.com/inspircd/inspircd/commit/8745660fcdac7c1b80c94cfc0ff60928cd4dd4b7).
+* [CVE-2019-20917](https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2019-20917)
