Add a patch for 2021-01 that actually works on 3.8.x.

--- a/docs/security/2021-01.md
+++ b/docs/security/2021-01.md
@@ -22,7 +22,7 @@ This vulnerability is present in the following releases:
 
 This vulnerability is fixed in version 3.10.0. It is strongly recommended that all affected users upgrade.
 
-If upgrading is not possible then [this](https://github.com/inspircd/inspircd/commit/4350a11c663b0d75f8119743bffb7736d87abd4d.patch) patch should be applied followed by running `/RELOADMODULE core_user` as a server operator.
+If upgrading is not possible then you should apply either [this patch for v3.8.0 or v3.8.1](https://github.com/inspircd/inspircd/commit/6fbe4dd791e62005c5243762cf6bd01b48ed9d73.patch) or [this patch for v3.9.0](https://github.com/inspircd/inspircd/commit/4350a11c663b0d75f8119743bffb7736d87abd4d.patch) followed by running `/RELOADMODULE core_user` as a server operator.
 
 ### History
 
