Add a CVE link for 2021-01.

--- a/docs/security/2021-01.md
+++ b/docs/security/2021-01.md
@@ -34,3 +34,4 @@ If upgrading is not possible then you should apply either [this patch for v3.8.0
 ### References
 
 * [InspIRCd commit 4350a11c](https://github.com/inspircd/inspircd/commit/4350a11c663b0d75f8119743bffb7736d87abd4d).
+* [CVE-2021-33586](https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2021-33586)
